# DeltaPD

./: .gitignore  Cargo.toml  README.md  build.sh  pyproject.toml
data/gtdb_r220/ar53/: timings.txt
example/: metadata.tsv  query.tree
python/deltapd/: __init__.py  __init__.pyi  __main__.py  method.py  tree.py
python/deltapd/model/: params.py
python/deltapd/util/: cli.py  logging.py  sysinfo.py
scripts/: calculate_pd_for_phyla.py  collect_ssu.py  generate_metadata.py  kate_queenie.py  tmp_plot.py  trim_msa.py  trim_msa_variations.py
src/: lib.rs  main.rs
src/method/: common_taxa.rs  deltapd.rs  equivalent_taxa.rs  knn.rs  mod.rs
src/model/: error.rs  job.rs  linalg.rs  metadata.rs  mod.rs  output.rs  params.rs  pdm.rs  result.rs  types.rs
src/ndarray/: filter.rs  mod.rs  sort.rs  validation.rs
src/python/: deltapd.rs  mod.rs
src/stats/: jackknife.rs  linalg.rs  mod.rs  vec.rs
src/util/: bitvec.rs  hash.rs  mod.rs  numeric.rs  rayon.rs
