[package]
name = "DeltaPD"
version = "0.1.0"
edition = "2021"




[dependencies]
env_logger = "0.11.3"
indicatif = { version = "0.17.8", features = ["rayon"] }
log = "0.4.22"
ndarray = "0.15.6"
phylodm = "3.1.0"
pyo3 = { version = "0.21.2", features = ["extension-module"] }
rayon = "1.10.0"
csv = "1.3.0"
clap = { version = "4.5.9", features = ["derive"] }
chrono = "0.4.38"
fern = "0.6.2"
humantime = "2.1.0"
log4rs = "1.3.0"
itertools = "0.13"
rand = "0.8.5"
phylotree = "0.1.2"
numpy = { version = "0.21.0" }
md-5 = "0.10.6"
tempfile = "3.10.1"
bitvec = "1.0.1"

[dev-dependencies]
criterion = "0.5.1"

[lib]
name = "rs_deltapd"
crate-type = ["cdylib", "rlib"] # todo: remove rlib once done

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

