[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "deltapd"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [ "typer", "dendropy",  "numpy", "matplotlib"]

[tool.maturin]
python-source = "python"
module-name = "deltapd.rs_deltapd"
bindings = "pyo3"
